[gd_scene load_steps=11 format=3 uid="uid://cub61p36wkv10"]

[ext_resource type="Script" path="res://Character.gd" id="1_qpg1y"]
[ext_resource type="Texture2D" uid="uid://boptj7avk4pco" path="res://assets/green circle.png" id="2_immr0"]
[ext_resource type="Texture2D" uid="uid://bm7u8ts5y3lwh" path="res://assets/bright green circle.png" id="3_lko3d"]
[ext_resource type="Texture2D" uid="uid://boe7y6pru2ghg" path="res://assets/red circle.png" id="4_j34fd"]
[ext_resource type="Texture2D" uid="uid://m3yayjsytnme" path="res://assets/rabbit.png" id="5_5p0np"]
[ext_resource type="Script" path="res://Stats.gd" id="6_h71mj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqfiu"]
radius = 72.0156

[sub_resource type="Animation" id="Animation_2pfn7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tieph"]
resource_name = "spin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_spdaf"]
_data = {
"RESET": SubResource("Animation_2pfn7"),
"spin": SubResource("Animation_tieph")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_qpg1y")

[node name="PhysicsCollision" type="CollisionShape2D" parent="."]
scale = Vector2(1.11478, 1.11478)
shape = SubResource("CircleShape2D_gqfiu")

[node name="HoverCircle" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.275, 0.275)
texture = ExtResource("2_immr0")

[node name="SelectCircle" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.275, 0.275)
texture = ExtResource("3_lko3d")

[node name="AttackCircle" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.275, 0.275)
texture = ExtResource("4_j34fd")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.262908, 0.262908)
texture = ExtResource("5_5p0np")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Icon"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_spdaf")
}

[node name="Stats" type="Node2D" parent="."]
script = ExtResource("6_h71mj")

[node name="Label" type="Label" parent="Stats"]
offset_left = -68.0
offset_top = -105.0
offset_right = 69.0
offset_bottom = -82.0
text = "asdf"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
